# Virtual

./: .gitignore  CMakeLists.txt  README.md  android_system.c  dummy  manual.txt  output.out  page.html  script.js  test.py
.github/workflows/: VFE.yml  VPU.yml  build-and-test.yml  cmake-multi-platform.yml
Virtual Processing Unit/examples/: hello_world.vpu
Virtual Processing Unit/src/: caller.h  compiler.c  core.h  decompiler.c  system.h
Virtual_Fictional_Emulator/: CMakeLists.txt
Virtual_Fictional_Emulator/examples/: factorial.txt
Virtual_Processing_Unit/: CMakeLists.txt  linux build.sh
Virtual_Processing_Unit/src/: decompiler.c  lexer.h  system.h
assembly/: eulers_number.vpu  hello_world.vpu
examples/: Q_rsqrt.txt  display_cmd.txt  eulers_number.txt  hello_world.txt  include_test.txt  input.txt  labels_test.txt  primes.txt  rule110.txt  string.txt
examples/vstd/: .vstdio.in.swp  vmath.in  vstdio.in
precomputed/: Q_rsqrt.out  Q_rsqrt.txt  display_cmd.out  display_cmd.txt  eulers_number.out  eulers_number.txt  hello_world.out  hello_world.txt  include_test.out  include_test.txt  input.out  input.txt  labels_test.out  labels_test.txt  primes.out  primes.txt  rule110.out  rule110.txt  string.out  string.txt
src/: assembler.c  compiler.c  core.c  core.h  debugger.c  decompiler.c  disassembler.c  disassembler.h  execute.c  labels.h  lexer.h  linux_system.c  main.c  parser.h  sdl2_system.c  system.c  system.h  virtual.c  virtual.h  virtual_files.h  vpu.c
tests/: cmpf  cmpf.c  debug_example.out  debug_example.txt  debug_expected_output.txt  debug_input.txt  display_bin.c  test.py  tokenizer.c  tokenizer_test.c
